# discord-channel-to-rss

./: .dockerignore  Dockerfile  discord_client.py  main.py  pyproject.toml
models/: Announcement.py  Event.py  __init__.py  database.py
templates/: rss.xml
