[tool.poetry]
name = "discordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.0.1"
flask = "^2.2.2"
peewee = "^3.15.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
